# csc222

./: .gitignore  InstallingQt.md  README.md  clean.sh
Exercises/: outputting_variables.cpp
Exercises/Card/: Card.cpp  Card.hpp  Deck.cpp  Deck.h  Deck.hpp  main.cpp
Exercises/ch02/: ten_mathematical_expressions.cpp
Exercises/ch03/: adding_new_functions.cpp  print_twice.cpp
Exercises/ch04/: is_greater_than.cpp  negative_recursion.cpp  stack_diagram.md
Exercises/ch05/: logical_operators.cpp  overload_functions.cpp  test_distance.cpp
Exercises/ch06/: infinite_loops.cpp  powers_table.cpp  print_mult_tables.cpp  while_loop_test.cpp
Exercises/ch07/: count_letters.cpp  ducklings.cpp  hello_strings.cpp  reverse_string.cpp  upper_and_lower.cpp
Exercises/ch08/: rectangle.cpp  rectangle.hpp
Exercises/ch09/: increment.cpp
Exercises/ch10/: counting.cpp  histogram.cpp  random_vector.cpp
Exercises/ch11/: shuffle.cpp  str_length.cpp  swaps.cpp
Exercises/ch12/: Fraction.cpp  Fraction.h  IncrementTime.cpp  Time.cpp  Time.hpp  test_fraction.cpp
Exercises/ch13/: Card.cpp  Time.cpp  Time.h
Exercises/ch14/: main.cpp  random.cpp  random.hpp
Exercises/ch15/: Complex.cpp  Complex.hpp  Point.cpp  Point.h  Point.hpp  test_complex.cpp  test_point.cpp
Notes/: Chapter_12.md
Projects/: Are_you_my_type?.cpp
Projects/Complex/: complex.cpp  complex.hpp  test_complex.cpp
Projects/FinalProject/: CMakeLists.txt  README.md  SDLAudioHandler.cpp  SDLAudioHandler.hpp  WavHeader.cpp  WavHeader.hpp  main.cpp
Projects/Imaginary/: complex.cpp  (+2 more)
week_1/: hello_world.cc
